src/components/styles/FilterBar.css
.filter-box {
    width: 15%;
    min-width: 0;
    margin: 0 0 1rem 1rem;
    border-radius: .4rem;
    padding: 1.5rem;
    background-color: #f2f2f2;
    box-shadow: .1rem .3rem .4rem rgba(12, 12, 12, 0.4);
    overflow: hidden;
    height: 100%;
}

.filter-box h4 {
    font-size: 1.4rem;
    font-weight: 500;
    white-space: nowrap;
    margin: 0;
    margin-bottom: 2rem;
    padding-bottom: 1rem;
    border-bottom: .75px solid grey; 
}

.filter-box___searchbar-input {
    font-size: 1rem;
    padding: 1rem;
    height: 2.5rem;
}

.filter-observation-type {
    height: 27%;
    margin-bottom: 2rem;
}

.filter-organisation {
    height: 27%;
    margin-bottom: 2rem;
}

.filter-dataset {
    height: 27%;
    margin-bottom: 2rem;
}

.filter-list {
    padding-left: 0;
    overflow-y: scroll;
    height: 55%;
    margin: 1rem 0 0 0;
}

.filter-list-button {
    font-size: 1.3rem;
    line-height: 1.5rem;
    bottom: 1rem;
    border: none;
    background-color: inherit;
    color: #001AFF;
    cursor: pointer;
}

.filter-list-button:focus {
    outline: none;
}

.filter-item {
    font-size: 1.3rem;
    line-height: 1.5rem;
    margin-bottom: .8rem;

    white-space: nowrap;
    overflow: hidden;
}

.filter__checked-item {
    font-size: .9rem;
    color: rgb(44, 44, 44);
    font-style: italic;
    white-space: nowrap;

    display: flex;
    width: 90%;
    height: 1.5rem;
    align-items: center;
    padding-left: 2rem;
    
    overflow: hidden;
    position: relative;
}

.filter__checked-item button {
    border: none;
    background-color: transparent;
    cursor: pointer;
    color: rgb(44, 44, 44);
    font-style: italic;
    font-size: 1.2rem;
    position: absolute;
    left: 0;
    top: .1rem;
}

.filter__checked-item button:hover {
    color: red;
}

.filter__checked-item button:focus {
    outline: none;
}

/*SWITCHER BETWEEN RASTERS AND WMS VIEW*/
.switcher {
    display: flex;
    justify-content: space-between;
    height: 6rem;
}

.switcher-button {
    font-size: 1.6rem;
    font-weight: 600;
    color: #fff;
    border: none;
    padding: 0;
    background-color: #BFBFBF;
    border-radius: .6rem;
    box-shadow: .1rem .2rem .4rem rgba(12, 12, 12, 0.5);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 70%;
    width: 45%;
    cursor: pointer;
}

.switcher-button:focus {
    outline: none;
}

.switcher-button:active {
    transform: translateY(2px);
}

.switcher-button:disabled {
    background-color: #55cbac;
    cursor: default;
}

